--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
-WALLET_1_KEY=
-WALLET_1_TO=
+PRIVATE_KEY=
+RPC_URL=https://evm-rpc.sei-chain.dev
+CONTRACT_ADDRESS=
+RECEIVER=0x5fbe74a283f7954f10aa04c2edf55578811aeb03
+AMOUNT=0.001
+ASSET_ADDRESS=0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee
+
