--- a/.env
+++ b/.env
@@ -1,7 +1,21 @@
-PRIVATE_KEY=
-RPC_URL=https://evm-rpc.sei-chain.dev
-CONTRACT_ADDRESS=
-RECEIVER=0x5fbe74a283f7954f10aa04c2edf55578811aeb03
+SEI_PRIVATE_KEYS=
+
+RPC_URL=https://evm-rpc-testnet.sei-apis.com
+
+CONTRACT_ADDRESS=0xcb1d8ece7dcf503ab5400ded0c8fc6ad453c98b2
+
+RECEIVER=xion1q5u6frvfzcks7fyhqp5udjdx9fsw089gl8p4p0
+
 AMOUNT=0.001
+
 ASSET_ADDRESS=0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee
 
+SWAP_COUNT=100
+
+TX_DELAY_MS=3000
+
+WALLET_DELAY_MS=6000
+
+LOOP=true
+
+LOOP_INTERVAL_MS=70000
